--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <title><%= _.capitalize(projectName) %></title>
-        <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no, minimal-ui" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="msapplication-tap-highlight" content="no" />
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         
         <!-- build:css(app/) css/famous.css -->
         <link rel="stylesheet" type="text/css" href="lib/famous/core/famous.css" />
